# MatdaanMitra

./: .gitignore  README.md
.github/workflows/: deploy.yml  deploy.yml.disabled
backend/: .env.example  Dockerfile  check_apis.py  check_settings.py  pyproject.toml  requirements.txt
backend/corpus/: embed.py  ingest.py
backend/corpus/data/: chunks.jsonl
backend/corpus/eval/: rag_eval.py
backend/src/agents/: graph.py  state.py
backend/src/agents/nodes/: __init__.py  guardrail.py  intent.py  live_lookup.py  profile_builder.py  rag_retrieval.py  synthesis.py  translation.py
backend/src/api/: main.py
backend/src/api/middleware/: auth.py  rate_limit.py
backend/src/api/routes/: chat.py  ero.py  grievance.py  health.py  profile.py  tts.py  voter.py
backend/src/config/: settings.py
backend/src/services/: encryption.py  ero_locator.py  pincode.py  static_fallbacks.py  translator.py  vector_search.py  voter_search.py
backend/tests/: conftest.py
backend/tests/integration/: test_chat_route.py
backend/tests/unit/: test_ero_locator.py  test_guardrail.py  test_intent.py
docs/: ARCHITECTURE.md  SECURITY.md
frontend/: .env.local.example  Dockerfile  next.config.mjs  next.config.ts  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: useChat.ts  useEROLocator.ts  useSSE.ts  useVoterProfile.ts
frontend/src/lib/: api.ts  firebase.ts  utils.ts
frontend/src/types/: voter.ts
infrastructure/terraform/: main.tf  outputs.tf  secrets.tf  terraform.tfvars.example  variables.tf
(+26 files in other folders)
